objects/n2de__cls_Territory_log__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Clean_country__c</fullName>
        <label>Clean country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Clean_state__c</fullName>
        <label>Clean state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Clean_zip__c</fullName>
        <label>Clean zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Error_message__c</fullName>
        <label>Error message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__In_error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if an error occurred while trying to match this record to a territory</description>
        <label>In error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Matched_territory__c</fullName>
        <description>Territory found that matches this record&apos;s clean data - format is MapName.TerritoryName</description>
        <label>Matched territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Matched_territory_level__c</fullName>
        <description>Which territory level we succeeded at matching this record on - country, state or zip</description>
        <label>Matched territory level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Record_id__c</fullName>
        <label>Record id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__sObject_Name__c</fullName>
        <label>sObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Classifier territory log</label>
    <nameField>
        <label>Classifier territory log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier territory logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>